--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ownerNumber": ["6285921165857@s.whatsapp.net"],
-  "ownerName": ["Christian ID"],
-  "ownerNum": "6285921165857",
-  "botName": "Hitomi MD",
-  "footer": "© Hitomi MD 2022",
-  "fake": "Bot By Christian ID",
+  "ownerNumber": ["6283862006229@s.whatsapp.net"],
+  "ownerName": ["SkyxmoonOfc"],
+  "ownerNum": "6283862006229",
+  "botName": "𝚂𝚊𝚜𝚢𝚊𝙼𝙳",
+  "footer": "© 𝚂𝚊𝚜𝚢𝚊 MD 2022",
+  "fake": "Bot By 𝚂𝚔𝚢𝚡𝚖𝚘𝚘𝚗 ID",
   "sessionName": "hitomi",
   "pathimg": "./media/hitomi.jpg",
   
